# SW_Final_Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.docker.md  README.md  XSSprotect.js  [바로가기]프로젝트.md  [중요] DB연결 정리(SQL문).md  [중요] 개발 일지  [중요] 개발 일지.md  [중요] 마커 테이블 readme  [중요] 아이디어 기록.md  [중요]깃허브 초보자를 위한 안내서(파일업로드,다운).md  [중요]파일다운로드방법과올리는방법 with git bash.md  admin.html  chat.js  docker-compose.yml  gps_set.js  index.html  init.sql  intro.html  login.html  login.js  main.js  map.html  mapStyle.css  package-lock.json  package.json  rebuild.bat  rebuild.sh  register.html  script.js  style.css  tempCodeRunnerFile.js  깃허브에서파일다운로드방법과올리는방법.md  노드 제이에이스 사용법.docx  모듈.md  서버여는방법.md  (+7 more)
backend/: manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_auto_20250903_1940.py
backend/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_auto_20250903_1940.py
backend/chat_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/chat-frontend/: package-lock.json  package.json  vue.config.js
images/: back.jfif  constellation.avif  star1.avif
map1프론트/: [중요] 아이디어 기록.md  index.html  login.css  map.html  package-lock.json  package.json  서버여는방법.md
map2프론트/: [중요] 개발 일지.md  [중요] 마커 테이블 readme  chat.js  index.html  login.html  map.html  package-lock.json  script.js  tempCodeRunnerFile.js
src/config/: db.js
src/routes/: auth.js  markers.js  (+1 more)
tests/: api.test.js
(+14 files in other folders)
